@@ -1,3 +1,4 @@
+from AccessControl import getSecurityManager
 from ftw.upgrade.jsonapi.base import APIView
 from ftw.upgrade.jsonapi.utils import action
 from ftw.upgrade.jsonapi.utils import jsonify
@@ -12,6 +13,14 @@ class ZopeAppAPI(APIView):
         """
 
         return list(self._get_plone_sites())
+
+    @jsonify
+    @action('GET')
+    def current_user(self):
+        """Return the current user when authenticated properly.
+        This can be used for testing authentication.
+        """
+        return getSecurityManager().getUser().getId()
 
     def _get_plone_sites(self):
         overview_view = self.context.restrictedTraverse('plone-overview')
